=== 1.1.9 2010-05-03
* 1 minor enhancement
  * fix japanese translation for Publication Date 
  * Added publication_place to document schema

=== 1.1.8 2010-03-08
* 1 minor enhancements
  * added from_library? to see if a document is from the library catalog

=== 1.1.7 2010-02-18
* 1 minor enhancement
  * allow locale to be specified as either a string or a symbol
  
=== 1.1.6 2010-01-14
* 1 minor enhancement
  * tweak database recommendation lists to make it support multiple recommendations
  
=== 1.1.5 2010-01-13
* 1 major enhancement
  * add support for database recomendation lists
  
=== 1.1.4 2010-01-12
* 4 minor enhancements:
  * add ISICitedReferencesCount for documents on which they're available
  * add ISICitedReferencesURI for document on which available
  * add command line option for setting s.role API parameter
  * map Document::URI field
  
=== 1.1.3 2010-01-11
* 2 major enhancements:
  * support for passing locale to summon gem
  * add japanese language translations

=== 1.1.1 2009-12-11
* 2 minor enhancements:
  * add support to handle government document classification number (GovDocClassNum)
  * map error.code into error object to allow for finer grained error messages

=== 1.1.0 2009-11-10
* 2 major enhancements:
  * add support for Thumbnails in the thumbnail_small, thumbnail_medium, and thumbnail_large fields
  * add availability service for querying physical catalogue records.
* 2 minor enhancements:
  * add support to handle multiple call numbers.
  * add support for corporate author.
  * add range? to see whether a facet is a range or not
* 1 bug fixes:
  * empty parameter was causing a NameError on the return trip
  * added range? predicate to range facets so that they can be identified as ranges

=== 1.0.0 2009-09-28

* 1 major enhancement:
  * Initial Release