@@ -1,0 +1,9 @@
+module Summon
+  module Locale
+    module ESES
+      TRANSLATIONS = {
+        "ContentType" => "Type de la Contente"
+      }
+    end
+  end
+end
